// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button/> should render 1`] = `
<DocumentFragment>
  <div
    class="sc-b2b79924-0 fauUln"
  >
    <button
      class="sc-b2b79924-1 cHWrQu"
      color="var(--text)"
      font-size="24"
      height="50"
      width="150"
    >
      <div
        class="sc-b2b79924-2 bUhZOL  background"
        width="150"
      />
      <div
        class="sc-b2b79924-3 cwYEoO"
      >
        <div
          class="sc-b2b79924-5 cOveme"
        >
          Test
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`<Button/> should render in loading state 1`] = `
<DocumentFragment>
  <div
    class="sc-b2b79924-0 fauUln"
  >
    <button
      class="sc-b2b79924-1 hDenWT loading"
      color="var(--text)"
      disabled=""
      font-size="24"
    >
      <div
        class="sc-b2b79924-2 bUhZOL loading background"
      />
      <div
        class="sc-b2b79924-3 cwYEoO"
      >
        <div
          class="sc-b2b79924-4 cbggbq loading"
        >
          <div
            class="sc-b46874d8-0 iNvNpZ loader"
            color="var(--text)"
          />
        </div>
        <div
          class="sc-b2b79924-5 cOveme loading"
        >
          Test
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`<Button/> should render with custom props 1`] = `
<DocumentFragment>
  <div
    class="sc-b2b79924-0 fauUln"
  >
    <button
      class="sc-b2b79924-1 diGHBH"
      color="red"
      font-size="12"
    >
      <div
        class="sc-b2b79924-2 cXFcEl  background"
      />
      <div
        class="sc-b2b79924-3 cwYEoO"
      >
        <div
          class="sc-b2b79924-5 cOveme"
        >
          Test
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;
